# bankproject

./: .env  database.py  main.py  pyproject.toml
app/: settings.py
app/bank_accounts/: bank_accounts_db_queries.py  bank_accounts_models.py  bank_accounts_routes.py
app/transactions/: transactions_db_queries.py  transactions_models.py  transactions_routes.py
app/users/: users_db_queries.py  users_models.py  users_routes.py  users_shemas.py
storage/: database.py  models.py
storage/migrations/: env.py
storage/migrations/versions/: 2025_06_11_1957-f67ab0d9d019_create_tables.py
